--- a/Portfolio/style.css
+++ b/Portfolio/style.css
@@ -403,6 +403,28 @@ footer form button {
   cursor: pointer;
 }
 
+/* back to top button */
+
+#back-to-top {
+  background-color: var(--dark-color);
+  color: var(--light-color);
+  height: 45px;
+  width: 45px;
+  border-radius: 2px;
+  display: none;
+  justify-content: center;
+  align-items: center;
+  opacity: 0.7;
+  position: fixed;
+  bottom: 2rem;
+  right: 2rem;
+  cursor: pointer;
+}
+
+#back-to-top i {
+  font-size: 1.5rem;
+}
+
 /* Tablets up to 768px */
 
 @media (max-width: 768px) {
