--- a/Portfolio/style.css
+++ b/Portfolio/style.css
@@ -633,7 +633,7 @@ footer form button {
 
   footer form .form-group input,
   footer form .form-group textarea {
-    padding: 0.5rem 4rem;
+    width: 100%;
     font-size: 10px;
   }
 
